--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.7
+  name: Room Thermostat Temperature Control v2.8
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -268,6 +268,7 @@ action:
                 {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
+                (Room Unoccupied: {{ is_unoccupied }})
               level: warning              
       - conditions:
           - condition: template
@@ -289,6 +290,7 @@ action:
                 {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
+                (Room Unoccupied: {{ is_unoccupied }})
               level: warning
       - conditions:
           - condition: template
@@ -310,6 +312,7 @@ action:
                 {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
+                (Room Unoccupied: {{ is_unoccupied }})
               level: warning
       - conditions:
           - condition: template
@@ -331,6 +334,7 @@ action:
                 {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
+                (Room Unoccupied: {{ is_unoccupied }})
               level: warning             
       - conditions:
           - condition: template
@@ -352,6 +356,7 @@ action:
                 {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
+                (Room Unoccupied: {{ is_unoccupied }})
               level: warning
   - delay: "00:10:00"
   - service: climate.set_temperature
