--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.8
+  name: Room Thermostat Temperature Control v2.9
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -198,6 +198,7 @@ variables:
   weekend_evening_offset: !input weekend_evening_offset
   current_temperature: "{{ states(external_temperature_var) | float }}"
   scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
+  thermostat_name: "{{ state_attr(thermostat, 'friendly_name') }}"
   is_weekend: "{{ now().weekday() in [5, 6] }}"
   time_period: >
     {% if now().hour >= 6 and now().minute >= 30 and now().hour < 12 %}
@@ -264,8 +265,8 @@ action:
           - service: system_log.write
             data:
               message: >
-                Calculated setpoint for thermostat {{ thermostat }}:
-                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}
+                Calculated setpoint for thermostat {{ thermostat_name }}:
+                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -286,8 +287,8 @@ action:
           - service: system_log.write
             data:
               message: >
-                Calculated setpoint for thermostat {{ thermostat }}:
-                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}
+                Calculated setpoint for thermostat {{ thermostat_name }}:
+                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -308,8 +309,8 @@ action:
           - service: system_log.write
             data:
               message: >
-                Calculated setpoint for thermostat {{ thermostat }}:
-                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}
+                Calculated setpoint for thermostat {{ thermostat_name }}:
+                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -330,8 +331,8 @@ action:
           - service: system_log.write
             data:
               message: >
-                Calculated setpoint for thermostat {{ thermostat }}:
-                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}
+                Calculated setpoint for thermostat {{ thermostat_name }}:
+                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -352,8 +353,8 @@ action:
           - service: system_log.write
             data:
               message: >
-                Calculated setpoint for thermostat {{ thermostat }}:
-                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}
+                Calculated setpoint for thermostat {{ thermostat_name }}:
+                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
