--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.13
+  name: Room Thermostat Temperature Control v2.14
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -349,7 +349,7 @@ action:
               entity_id: !input thermostat
             data:
               temperature: >
-                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}
+                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               hvac_mode: "heat"
           - service: system_log.write
             data:
@@ -361,6 +361,7 @@ action:
                 (delta: {{ delta_below_0 }}°C)
                 (Unoccupied Offset: {{ unoccupied_offset if is_unoccupied else 0 }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
+                (new setpoint calc: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               level: warning
   - delay: "00:10:00"
   - service: climate.set_temperature
