--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.15
+  name: Room Thermostat Temperature Control v2.16
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -255,19 +255,19 @@ action:
             value_template: "{{ current_temperature > 15 }}"
         sequence:
           - condition: template
-            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0)) }}"
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied | string == 'true' else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}
+                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               hvac_mode: "heat"
           - service: system_log.write
             data:
               message: >
                 Calculated setpoint for thermostat {{ thermostat_name }}:
-                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}°C from {{ thermostat_currentsetpoint }}°C
+                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}°C from {{ thermostat_currentsetpoint }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -277,19 +277,19 @@ action:
             value_template: "{{ current_temperature > 10 and current_temperature <= 15 }}"
         sequence:
           - condition: template
-            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0)) }}"
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied | string == 'true' else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}
+                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               hvac_mode: "heat"
           - service: system_log.write
             data:
               message: >
                 Calculated setpoint for thermostat {{ thermostat_name }}:
-                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}°C from {{ thermostat_currentsetpoint }}°C
+                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}°C from {{ thermostat_currentsetpoint }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -299,19 +299,19 @@ action:
             value_template: "{{ current_temperature > 5 and current_temperature <= 10 }}"
         sequence:
           - condition: template
-            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0)) }}"
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied | string == 'true' else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}
+                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               hvac_mode: "heat"
           - service: system_log.write
             data:
               message: >
                 Calculated setpoint for thermostat {{ thermostat_name }}:
-                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}°C from {{ thermostat_currentsetpoint }}°C
+                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}°C from {{ thermostat_currentsetpoint }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -321,19 +321,19 @@ action:
             value_template: "{{ current_temperature > 2 and current_temperature <= 5 }}"
         sequence:
           - condition: template
-            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0)) }}"
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}
+                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               hvac_mode: "heat"
           - service: system_log.write
             data:
               message: >
                 Calculated setpoint for thermostat {{ thermostat_name }}:
-                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}°C from {{ thermostat_currentsetpoint }}°C
+                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}°C from {{ thermostat_currentsetpoint }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
@@ -343,7 +343,7 @@ action:
             value_template: "{{ current_temperature <= 2 }}"
         sequence:
           - condition: template
-            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0)) }}"
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
@@ -355,13 +355,12 @@ action:
             data:
               message: >
                 Calculated setpoint for thermostat {{ thermostat_name }}:
-                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}°C from {{ thermostat_currentsetpoint }}°C
+                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}°C from {{ thermostat_currentsetpoint }}°C
                 (External Temp: {{ current_temperature }}°C)
                 (scheduled setpoint: {{ scheduled_setpoint }}°C)
                 (delta: {{ delta_below_0 }}°C)
                 (Unoccupied Offset: {{ unoccupied_offset if is_unoccupied else 0 }}°C)
                 (Room Unoccupied: {{ is_unoccupied }})
-                (new setpoint calc: {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied | string == 'true' else 0) }}
               level: warning
   - delay: "00:10:00"
   - service: climate.set_temperature
