--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat Temperature Control v2.19
+  name: Room Thermostat Temperature Control v2.20
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
     specific conditions, and room occupancy status with configurable occupancy detection and time-based offsets.
@@ -243,13 +243,16 @@ variables:
     {% endif %}
   automation_delay: !input automation_delay
 
+condition:
+  conditions:
+    - condition: state
+      entity_id: input_boolean.holiday_mode
+      state: "off"
+
 action:
   - condition: time
     before: "22:30:00"
     after: "06:30:00"
-  - condition: state
-    entity_id: input_boolean.holiday_mode
-    state: "off"
   - delay:
       seconds: "{{ automation_delay | int }}"
   - choose:
